--- a/noticias/index.html
+++ b/noticias/index.html
@@ -44,17 +44,16 @@
 
     <footer class="bg-gray-800 text-white p-6 mt-8">
         <div class="container mx-auto text-center">
-            <p>&copy; 2025 Portal de Notícias. Todos os direitos reservados.</p>
+            <p>&copy; 2024 Portal de Notícias. Todos os direitos reservados.</p>
         </div>
     </footer>
 
     <script>
-        let allNews = []; // Variável para armazenar todas as notícias
+        let allNews = [];
 
-        // Função para renderizar as notícias na página
         function renderNews(newsToRender) {
             const newsContainer = document.getElementById('news-container');
-            newsContainer.innerHTML = ''; // Limpa o conteúdo anterior
+            newsContainer.innerHTML = '';
 
             if (newsToRender.length === 0) {
                 newsContainer.innerHTML = `<p class="text-center text-gray-500 text-xl col-span-full">Nenhuma notícia encontrada.</p>`;
@@ -64,7 +63,6 @@
             newsToRender.forEach(article => {
                 const newsCard = document.createElement('div');
                 newsCard.classList.add('bg-white', 'rounded-xl', 'overflow-hidden', 'shadow-2xl', 'hover:shadow-indigo-400', 'transition-all', 'duration-300', 'transform', 'hover:-translate-y-2');
-
                 const imageUrl = article.image || `https://placehold.co/600x400/3b82f6/ffffff?text=${encodeURIComponent(article.fonte)}`;
                 
                 newsCard.innerHTML = `
@@ -102,7 +100,6 @@
             });
         }
 
-        // Função para filtrar as notícias e renderizá-las
         function filterAndRenderNews() {
             const selectedSource = document.getElementById('news-source').value;
             let filteredNews = [];
@@ -120,7 +117,7 @@
             const statusMessage = document.getElementById('status-message');
             const newsSourceSelector = document.getElementById('news-source');
 
-            fetch('/noticias/todas_as_noticias.json')
+            fetch('noticias/todas_as_noticias.json?' + new Date().getTime())
                 .then(response => {
                     if (!response.ok) {
                         throw new Error(`Erro ${response.status}: ${response.statusText}. Verifique se o arquivo existe e se o bot foi executado.`);
@@ -128,8 +125,8 @@
                     return response.json();
                 })
                 .then(data => {
-                    allNews = data; // Armazena os dados originais
-                    renderNews(allNews); // Renderiza todas as notícias inicialmente
+                    allNews = data;
+                    renderNews(allNews);
                 })
                 .catch(error => {
                     console.error('Erro ao carregar as notícias:', error);
@@ -140,7 +137,6 @@
                     statusMessage.classList.remove('text-gray-500');
                 });
 
-            // Adiciona um listener para o evento de mudança no seletor
             newsSourceSelector.addEventListener('change', filterAndRenderNews);
         });
     </script>
