--- a/index.html
+++ b/index.html
@@ -6,65 +6,38 @@
     <title>Portal de Notícias</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        /* Define a fonte padrão para o projeto */
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f3f4f6; /* Fundo cinza claro */
-        }
+        body { font-family: 'Inter', sans-serif; background-color: #f3f4f6; }
     </style>
 </head>
-<body class="flex flex-col min-h-screen pt-24">
-
-    <header class="bg-indigo-600 text-white shadow-lg p-6 w-full fixed top-0 z-50">
+<body class="flex flex-col min-h-screen">
+    <header class="bg-indigo-600 text-white shadow-lg p-6">
         <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl sm:text-3xl font-bold">Portal de Notícias</h1>
-
-            <div class="flex items-center space-x-2">
-                <label for="news-source" class="font-semibold text-sm sm:text-base">Filtrar por Fonte:</label>
-                <select id="news-source" class="bg-indigo-700 text-white p-2 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-300">
-                    <option value="todas">Todas as notícias</option>
-                    <option value="g1">G1</option>
-                    <option value="cnn brasil">CNN Brasil</option>
-                    <option value="jovem pan">Jovem Pan</option>
-                    <option value="folha de s.paulo">Folha de S.Paulo</option>
-                    <option value="exame">Exame</option>
-                    <option value="terra">Terra</option>
-                    <option value="veja">Veja</option>
-                </select>
-            </div>
+            <h1 class="text-3xl font-bold">Portal de Notícias</h1>
         </div>
     </header>
-
     <main class="container mx-auto flex-grow p-6">
         <h2 class="text-4xl font-extrabold text-center text-gray-800 mb-8">Últimas Notícias</h2>
         <div id="news-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
             <p id="status-message" class="text-center text-gray-500 text-xl col-span-full">Carregando notícias...</p>
         </div>
     </main>
-
     <footer class="bg-gray-800 text-white p-6 mt-8">
         <div class="container mx-auto text-center">
             <p>&copy; 2024 Portal de Notícias. Todos os direitos reservados.</p>
         </div>
     </footer>
-
     <script>
-        let allNews = [];
-
-        function renderNews(newsToRender) {
+        function renderNews(news) {
             const newsContainer = document.getElementById('news-container');
             newsContainer.innerHTML = '';
-
-            if (newsToRender.length === 0) {
+            if (news.length === 0) {
                 newsContainer.innerHTML = `<p class="text-center text-gray-500 text-xl col-span-full">Nenhuma notícia encontrada.</p>`;
                 return;
             }
-
-            newsToRender.forEach(article => {
+            news.forEach(article => {
                 const newsCard = document.createElement('div');
                 newsCard.classList.add('bg-white', 'rounded-xl', 'overflow-hidden', 'shadow-2xl', 'hover:shadow-indigo-400', 'transition-all', 'duration-300', 'transform', 'hover:-translate-y-2');
                 const imageUrl = article.image || `https://placehold.co/600x400/3b82f6/ffffff?text=${encodeURIComponent(article.fonte)}`;
-                
                 newsCard.innerHTML = `
                     <img src="${imageUrl}" alt="Imagem da notícia" class="w-full h-48 object-cover">
                     <div class="p-6">
@@ -72,62 +45,21 @@
                         <p class="text-gray-600 mb-4">Fonte: ${article.fonte}</p>
                         <p class="text-sm text-gray-500">${article.data}</p>
                         <a href="${article.link}" target="_blank" class="text-indigo-600 hover:text-indigo-800 transition duration-300 font-semibold mt-4 inline-block">Leia mais...</a>
-                        
-                        <div class="flex items-center space-x-4 mt-4 text-gray-500">
-                            <span class="text-sm font-semibold">Compartilhar:</span>
-                            <a href="https://api.whatsapp.com/send?text=${encodeURIComponent(article.titulo + ' - ' + article.link)}" 
-                               target="_blank" 
-                               class="hover:text-green-500 transition-colors duration-300"
-                               title="Compartilhar no WhatsApp">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M12.04 2.11c-5.46 0-9.91 4.45-9.91 9.91 0 1.75.46 3.44 1.35 4.93L.5 22.5l5.06-1.33c1.4.78 2.97 1.22 4.6 1.22 5.46 0 9.91-4.45 9.91-9.91S17.5 2.11 12.04 2.11zm.01 1.55c4.61 0 8.35 3.74 8.35 8.35s-3.74 8.35-8.35 8.35c-1.48 0-2.92-.39-4.17-1.14l-4.43 1.16L3.92 15.6c-.75-1.25-1.14-2.69-1.14-4.17 0-4.61 3.74-8.35 8.35-8.35zm3.63 11.23c-.1-.18-.37-.29-.78-.49-.41-.19-.9-.3-1.4-.49-.5-.19-.99-.3-.88-.5.1-.2.62-.75.75-.9.13-.15.25-.33.3-.41.05-.08.03-.17-.03-.29s-.35-.86-.5-1.04c-.15-.18-.3-.15-.42-.15s-.24-.03-.36-.03-.26-.06-.41.13-.59.7-.72.84c-.13.15-.26.17-.47.15-.2-.02-.8-.29-.95-.44s-.15-.17-.3-.35c-.15-.18-.3-.49-.45-.63s-.29-.29-.41-.3c-.12-.02-.2-.02-.3-.02-.1 0-.21-.01-.32-.01-.1 0-.25.04-.37.15-.1.12-.39.42-.39.99 0 .57.4.95.46 1.02.06.07.82 1.43 1.95 1.9.3.13.53.2.72.29.19.09.43.15.65.15.22 0 .44-.06.65-.18.21-.13.56-.34.64-.46.08-.13.17-.23.25-.37s.24-.31.28-.35.08-.1.16-.18c.08-.08.15-.16.21-.24.06-.08.12-.14.16-.18.04-.04.09-.07.13-.1z"/></svg>
-                            </a>
-                            <a href="https://www.facebook.com/sharer/sharer.php?u=${encodeURIComponent(article.link)}" 
-                               target="_blank" 
-                               class="hover:text-blue-600 transition-colors duration-300"
-                               title="Compartilhar no Facebook">
-                               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C6.477 2 2 6.477 2 12c0 4.991 3.656 9.124 8.438 9.878v-6.983H7.579V12h2.859V9.69c0-2.81 1.693-4.354 4.226-4.354 1.234 0 2.31.092 2.62.133v3.018h-1.79c-1.399 0-1.671.666-1.671 1.642V12h3.352l-.545 3.495h-2.807v6.983C18.344 21.124 22 16.991 22 12c0-5.523-4.477-10-10-10z"/></svg>
-                            </a>
-                            <a href="https://twitter.com/intent/tweet?text=${encodeURIComponent(article.titulo)}&url=${encodeURIComponent(article.link)}" 
-                               target="_blank" 
-                               class="hover:text-blue-400 transition-colors duration-300"
-                               title="Compartilhar no Twitter">
-                               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M22.46 6.32c-.66.29-1.36.49-2.09.58.76-.46 1.34-1.19 1.62-2.06-.72.43-1.52.74-2.37.91-.68-.72-1.65-1.17-2.73-1.17-2.06 0-3.73 1.67-3.73 3.73 0 .29.03.58.09.85C9.46 9.4 6.27 7.7 4.15 5.12c-.31.54-.48 1.17-.48 1.84 0 1.29.66 2.43 1.67 3.1-.61-.02-1.18-.18-1.68-.46v.05c0 1.82 1.29 3.33 3 3.68-.31.08-.64.12-.98.12-.24 0-.48-.02-.71-.07.48 1.51 1.87 2.61 3.51 2.64-1.28 1-2.9 1.6-4.64 1.6-.3 0-.59-.02-.88-.06 1.65 1.06 3.61 1.68 5.69 1.68 6.83 0 10.56-5.65 10.56-10.56 0-.16-.01-.33-.01-.49.73-.53 1.36-1.2 1.86-1.95z"/></svg>
-                            </a>
-                        </div>
                     </div>
                 `;
                 newsContainer.appendChild(newsCard);
             });
         }
-
-        function filterAndRenderNews() {
-            const selectedSource = document.getElementById('news-source').value;
-            let filteredNews = [];
-
-            if (selectedSource === 'todas') {
-                filteredNews = allNews;
-            } else {
-                filteredNews = allNews.filter(article => article.fonte.toLowerCase() === selectedSource.toLowerCase());
-            }
-
-            renderNews(filteredNews);
-        }
-
         document.addEventListener('DOMContentLoaded', () => {
             const statusMessage = document.getElementById('status-message');
-            const newsSourceSelector = document.getElementById('news-source');
-
-            fetch('noticias/todas_as_noticias.json?' + new Date().getTime())
+            fetch('noticias/todas_as_noticias.json')
                 .then(response => {
                     if (!response.ok) {
-                        throw new Error(`Erro ${response.status}: ${response.statusText}. Verifique se o arquivo existe e se o bot foi executado.`);
+                        throw new Error(`Erro ${response.status}: ${response.statusText}. Verifique se o arquivo existe.`);
                     }
                     return response.json();
                 })
-                .then(data => {
-                    allNews = data;
-                    renderNews(allNews);
-                })
+                .then(data => renderNews(data))
                 .catch(error => {
                     console.error('Erro ao carregar as notícias:', error);
                     const newsContainer = document.getElementById('news-container');
@@ -136,8 +68,6 @@
                     statusMessage.classList.add('text-red-500');
                     statusMessage.classList.remove('text-gray-500');
                 });
-
-            newsSourceSelector.addEventListener('change', filterAndRenderNews);
         });
     </script>
 </body>
