--- a/index.html
+++ b/index.html
@@ -98,12 +98,11 @@
         document.addEventListener('DOMContentLoaded', () => {
             const statusMessage = document.getElementById('status-message');
             const newsSourceSelector = document.getElementById('news-source');
-            // Adiciona um timestamp para evitar o cache do navegador
             const cacheBuster = `?timestamp=${Date.now()}`;
             fetch(`noticias/todas_as_noticias.json${cacheBuster}`)
                 .then(response => {
                     if (!response.ok) {
-                        throw new Error(`Erro ${response.status}: ${response.statusText}. Verifique se o arquivo existe.`);
+                        throw new Error(`Erro ${response.status}: ${response.statusText}. Verifique se o arquivo existe e se o bot foi executado.`);
                     }
                     return response.json();
                 })
