deploy: 7a35dbb0c8b8722d9912da5c1ac8451c7850c2b3

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             const statusMessage = document.getElementById('status-message');
             const newsSourceSelector = document.getElementById('news-source');
             const cacheBuster = `?timestamp=${Date.now()}`;
-            fetch(`noticias/todas_as_noticias.json${cacheBuster}`)
+            fetch('noticias/todas_as_noticias.json')
                 .then(response => {
                     if (!response.ok) {
                         throw new Error(`Erro ${response.status}: ${response.statusText}. Verifique se o arquivo existe e se o bot foi executado.`);
